extends Control

# ç»“ç®—æ•°æ®ï¼ˆç”±GameSessionä¼ é€’ï¼‰
var result_data: Dictionary = {
	"difficulty": "endless",
	"time": 0.0,
	"error_count": 0,
	"score": 0
}

# åœºæ™¯é¢„åŠ è½½ï¼ˆä»…ä¿ç•™rootåœºæ™¯ï¼‰
var root_scene: PackedScene

func _ready() -> void:
	# åˆå§‹åŒ–ç»“ç®—æ•°æ®æ˜¾ç¤º
	_update_result_ui()
	# å»¶è¿Ÿé¢„åŠ è½½åœºæ™¯
	call_deferred("_preload_scenes")
	# ç»‘å®šæŒ‰é’®ä¿¡å·
	_bind_buttons()
	print("ç»“ç®—åœºæ™¯åˆå§‹åŒ–å®Œæˆ")

# ç»‘å®šæŒ‰é’®ä¿¡å·
func _bind_buttons() -> void:
	if has_node("BackMenuBtn"):
		$BackMenuBtn.pressed.connect(_on_back_menu_btn_pressed)
		print("âœ… è¿”å›é¦–é¡µæŒ‰é’®ä¿¡å·ç»‘å®šæˆåŠŸ")
	else:
		push_warning("âš ï¸ æ‰¾ä¸åˆ°BackMenuBtnèŠ‚ç‚¹ï¼")

# é¢„åŠ è½½åœºæ™¯
func _preload_scenes() -> void:
	root_scene = load("res://scenes/main/root.tscn")
	if not root_scene:
		push_error("âŒ rootåœºæ™¯åŠ è½½å¤±è´¥ï¼è·¯å¾„ï¼šres://scenes/main/root.tscn")
	else:
		print("âœ… rootåœºæ™¯é¢„åŠ è½½æˆåŠŸ")

# æ›´æ–°ç»“ç®—ç•Œé¢æ˜¾ç¤º
func _update_result_ui() -> void:
	var difficulty_name = {
		"speedrun": "é€Ÿé€šæ¨¡å¼",
		"harmless": "æ— ä¼¤æ¨¡å¼",
		"endless": "æ— å°½æ¨¡å¼"
	}.get(result_data.difficulty, "æœªçŸ¥æ¨¡å¼")
	
	if has_node("DifficultyText"):
		$DifficultyText.text = "æŒ‘æˆ˜éš¾åº¦ï¼š%s" % difficulty_name
	if has_node("TimeText"):
		var total_seconds = int(result_data.time)
		var minutes = str(total_seconds / 60).pad_zeros(2)
		var seconds = str(total_seconds % 60).pad_zeros(2)
		$TimeText.text = "æ¸¸æˆæ—¶é•¿ï¼š%s:%s" % [minutes, seconds]
	if has_node("ErrorText"):
		$ErrorText.text = "å¤±è¯¯æ¬¡æ•°ï¼š%d" % result_data.error_count
	if has_node("ScoreText"):
		$ScoreText.text = "æœ€ç»ˆåˆ†æ•°ï¼š%d" % result_data.score

# è¿”å›é¦–é¡µï¼ˆæ”¹ç”¨Godotæ ‡å‡†åœºæ™¯åˆ‡æ¢ï¼‰
func _on_back_menu_btn_pressed() -> void:
	print("ğŸ”µ ç‚¹å‡»è¿”å›é¦–é¡µ")
	if root_scene:
		# ç›´æ¥åˆ‡æ¢åˆ°rootåœºæ™¯ï¼ˆGodotæ ‡å‡†æ–¹æ³•ï¼Œè‡ªåŠ¨é‡ç½®åœºæ™¯ï¼‰
		get_tree().change_scene_to_packed(root_scene)
	else:
		push_error("âŒ æ— æ³•è¿”å›é¦–é¡µï¼šrootåœºæ™¯æœªåŠ è½½")

# å¤–éƒ¨è®¾ç½®ç»“ç®—æ•°æ®çš„æ¥å£
func set_result_data(data: Dictionary) -> void:
	result_data = data
	_update_result_ui()
	print("ğŸ“Š ç»“ç®—æ•°æ®å·²æ›´æ–°ï¼š", result_data)
